integrando a api de tempo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
             <div id="description-container">
                 <p class="description">nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d@2x.png" width="50px" height="50px" alt="condições do tempo" id="weather-icon">
+                <img src="http://openweathermap.org/img/wn/01d.png" width="50px" height="50px" alt="condições do tempo" id="weather-icon">
             </div>
             <div id="details-container">
                 <p id="umidity">
