--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span>38</span>&deg;C
             </p>
             <div id="description-container">
-                <p class="description">nublado</p>
+                <p id="description">nublado</p>
                 <img src="http://openweathermap.org/img/wn/01d.png" width="50px" height="50px" alt="condições do tempo" id="weather-icon">
             </div>
             <div id="details-container">
