--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
                 </button>
             </div>
         </div>
-        <div id="weather-data">
-            <h2>
+        <div id="weather-data" class="hide">
+            </h2>
                 <i class="fa-solid fa-location-dot"></i>
-                <span id="city">Maceió</span>
-                <img src="https://flagsapi.com/BR/flat/64.png" alt="bandeira do pais" id="country">
+                <span id="city"></span>
+                <img src="" alt="bandeira do pais" id="country">
             </h2>
             <p id="temperature">
-                <span>38</span>&deg;C
+                <span></span>&deg;
             </p>
             <div id="description-container">
-                <p id="description">nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d.png" width="50px" height="50px" alt="condições do tempo" id="weather-icon">
+                <p id="description"></p>
+                <img src="" width="50px" height="50px" alt="condições do tempo" id="weather-icon">
             </div>
             <div id="details-container">
                 <p id="umidity">
                     <i class="fa-solid fa-droplet"></i>
-                    <span>38%</span>
+                    <span></span>
                 </p>
                 <p id="wind">
                     <i class="fa-solid fa-wind"></i>
-                    <span>3Km/h</span>
+                    <span></span>
                 </p>
             </div>
         </div>
